syntax = "proto3";

option csharp_namespace = "FixProtocol.Core";

package Protos;

service HealthCheck {
  rpc CheckHeartbeatRequest (HeartbeatRequest) returns (HeartbeatResponse);
  rpc SendTestRequest (TestRequestRequest) returns (TestRequestResponse);
}

message HeartbeatRequest {
  enum MessageType {
    NONE = 0;
    HEARTBEAT = 1;
  };
  MessageType messageType = 1;
}

message HeartbeatResponse {
}

message TestRequestRequest {
  enum MessageType {
    NONE = 0;
    TEST_REQUEST = 2;
  };
  MessageType messageType = 2;
}

message TestRequestResponse {
  enum MessageType {
    NONE = 0;
    HEARTBEAT = 1;
  };
  MessageType messageType = 2;
}